fixing popup on mobile

--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -22,7 +22,7 @@
 
   a {
     font-weight: 600;
-    transition: all .2s;
+    transition: all .4s;
 
     &:hover {
       color: var(--gray);
