--- a/src/scss/sections/_work.scss
+++ b/src/scss/sections/_work.scss
@@ -33,7 +33,7 @@
   order: 2;
 
   & a {
-    transition: all .3s;
+    transition: all .4s;
 
     &:hover {
       color: var(--gray);
